// Copyright 2023 Google LLC. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package tfx.orchestration;

import "ml_metadata/proto/metadata_store.proto";

// Facade spec args of custom component that use placeholder logics. This can be
// computed from an execution hook on the runtime.
// Next ID: 4
message PreExecutionOutput {
  // Similar message field to tfx.orchestration.executable_spec.Flag, but has
  // a static primitive value type.
  message Flag {
    string name = 1;
    ml_metadata.Value value = 2;
  }

  // Flags to pass to the binary.
  repeated Flag flags = 1;
  // Variables to the BCL job.
  map<string, ml_metadata.Value> vars = 2;
  // Extra flags to pass to the binary.
  repeated ml_metadata.Value extra_flags = 3;
}
